--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -120,14 +120,15 @@
     {
       "cell_type": "code",
       "source": [
-        "#csv\n",
         "import pandas as pd\n",
-        "df=pd.read"
+        "df = pd.read_csv(\"sales (1).csv\")\n",
+        "df[\"Final_Amount\"] = df[\"Amount\"] * df[\"Quantity\"] * (1 - df[\"Discount\"] / 100)\n",
+        "df.to_csv(\"update_sales (1).csv\", index=False)"
       ],
       "metadata": {
-        "id": "ubA6MZDVKGfH"
+        "id": "V-8tVXeCaT5t"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     }
   ]
